--- a/chatlangbackend/package.json
+++ b/chatlangbackend/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  
+  
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,4 +22,5 @@
     "mongoose": "^8.18.1",
     "socket.io": "^4.8.1"
   }
+  
 }
